<resources>
    <string name="app_name">OrgChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_details">Enter Details</string>
    <string name="profile_name">Name</string>
    <string name="profile_age">Age</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="details">Details</string>
    <string name="invite">Create Invite</string>
    <string name="get_invite">Get Invite</string>
    <string name="enter_team_name">Enter team name</string>

</resources>
